# Hola

./: .env.example  .env.production.example  .gitignore  .replit  .semgrepignore  CHANGELOG.md  Dockerfile  IMPROVEMENTS.md  MEJORAS_CRITICAS.md  WORK_PLAN.md  aggressive_repair.sh  curl_final.txt  curl_output.txt  deploy.sh  deploy_direct.sh  deploy_nginx.sh  deploy_update.sh  deploy_vps.sh  deployment_guide.md  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  ecosystem.config.cjs  fix_pm2.sh  fix_vps_env.sh  full_deploy.sh  nginx.conf  nuclear_repair.sh  package-lock.json  package.json  playwright.config.ts  production_env_setup.sh  pyproject.toml  quick_deploy.sh  referencias_final.txt  replit.md  setup_optimized.sh  start.sh  test_excel_output.xlsx  test_output.docx  (+8 more)
.github/: dependabot.yml
Downloads/: ~$2 168 Intro + metodo.docx  ~$37 851.docx  ~$6 071 9.45.26 p.m..docx  ~$6 967- Antecedentes I & N 9.40.36 a.m..docx  ~$7 595 Tarea .docx  ~$85 192.docx  ~$87 623.docx  ~$93 664.docx  ~$Doc3.docx  ~$NK GPTS.docx  ~$NOTAS .docx  ~$OYECTO DE TESIS O TESIS.docx  ~$Presentacion de producto Innovacion .pptx  ~$TUTULO DE TSP.docx  ~$aaaaa.docx  ~$tecedentes internacionales.docx  ~$tulo propuesto.docx
artifacts/: 1768708824671_Solicitud_formal_de_permiso_para_viajar.docx  1768712011779_Solicitud_formal_de_permiso_para_viajar.docx  1768712293849_Solicitud_formal_de_permiso_para_viajar.docx  1768712633026_Solicitud_formal_de_permiso_para_viajar.docx  1768712833227_Solicitud_formal_de_permiso_para_viajar.docx  E2E_Test_Document_1767720517700.txt  (+109 more)
docs/: api.md  (+3 more)
(+1232 files in other folders)
